<?xml version="1.0"?>
<package format="2">
  <name>icub-ds-motion</name>
  <version>0.0.0</version>
  <description>The icub-ds-motion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nbfigueroa@todo.todo">nbfigueroa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/icub-ds-walking</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <!-- <run_depend>roscpp</run_depend> -->

  <build_depend>std_msgs</build_depend>
  <!-- <run_depend>std_msgs</run_depend> -->

  <build_depend>tf</build_depend>
  <!-- <run_depend>tf</run_depend> -->

  <build_depend>rospy</build_depend>
  <!-- <run_depend>rospy</run_depend> -->

  <build_depend>geometry_msgs</build_depend>
  <!-- <run_depend>geometry_msgs</run_depend> -->


</package>
